[gd_scene load_steps=5 format=3 uid="uid://c8e3pnolprsdg"]

[ext_resource type="Script" path="res://script/ranged.gd" id="1_gwhwm"]
[ext_resource type="Texture2D" uid="uid://bn7i8rh2pb32d" path="res://asset/Basic Humanoid Sprites 4x.png" id="2_dona4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byxu3"]
size = Vector2(112, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2se3e"]
size = Vector2(262.283, 96.5831)

[node name="ranged_air" type="CharacterBody2D"]
script = ExtResource("1_gwhwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_byxu3")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 7.15256e-07)
scale = Vector2(2.07407, 1.68421)
texture = ExtResource("2_dona4")
region_enabled = true
region_rect = Rect2(155, 13.5, 54, 57)
region_filter_clip_enabled = true

[node name="attack_range" type="Area2D" parent="Icon"]
position = Vector2(71.2796, 0.590165)
scale = Vector2(0.559056, 0.590165)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon/attack_range"]
position = Vector2(51.8307, -1)
shape = SubResource("RectangleShape2D_2se3e")

[node name="LifeBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
max_value = 500.0
